Title Alignment Fixed And Modal Example Made

--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,42 @@ h5 {
    margin: 0;
 }
 
+.modal {
+   display: none;
+   position: fixed;
+   z-index: 1;
+   padding-top: 5%;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   /* overflow: auto; Enable scroll if needed */
+   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modalContent {
+   background-color: white;
+   margin: auto;
+   padding: 20px;
+   border: 1px solid #888;
+   width: 80%;
+   overflow: auto;
+}
+
+.closeModal {
+   color: #aaaaaa;
+   float: right;
+   font-size: 28px;
+   font-weight: bold;
+}
+
+.closeModal:hover,
+.closeModal:focus {
+   color: #000;
+   text-decoration: none;
+   cursor: pointer;
+}
+
 .trending {
    border-top: 1px solid grey;
    border-bottom: 1px solid grey;
